--- a/screen.css
+++ b/screen.css
@@ -1,1 +1,19 @@
 /* Add screen styles below */
+body {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.6;
+    color: #333;
+}
+
+header {
+    background-color: #ff6600;
+    padding: 5px;
+}
+
+.navigate {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
