--- a/screen.css
+++ b/screen.css
@@ -16,6 +16,8 @@ header {
     padding: 0;
     margin: 0;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     color: black;
 }
 
