--- a/screen.css
+++ b/screen.css
@@ -9,6 +9,7 @@ body {
 h1{
     font-size: 14px;
     color: black;
+    display: flex;
 }
 
 header {
@@ -45,6 +46,16 @@ header nav{
     margin: 20px 0;
 }
 
-.newsli {
+.news li {
     padding: 5px 0;
+}
+
+.title {
+    font-weight: bold;
+}
+
+.url {
+    color: #828282;
+    font-size: 12px;
+    margin-left: 5px;
 }
